--- a/sqlcompare.css
+++ b/sqlcompare.css
@@ -52,6 +52,12 @@ html, body {
 	outline:none;
 }
 
+textarea {
+	white-space: pre;
+	overflow-wrap: normal;
+	overflow-x: scroll;
+}
+
 button {
 	padding:1em;
 	margin-top:1em;
